5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1594_1802.log
== TEST (2019-04-05 10:00:55) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = sqrt(5*d1)+(pi**d2/3)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:01:35) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = sqrt(5*d1)+(pi**d2/3)
int(dano)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:02:33) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = sqrt(5*d1)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 10:02:43) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = sqrt(5*d1)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- EXECUTION TIME:
0.158387
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:02:52) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = sqrt(5*d1)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:05:24) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import* sqrt
dano = sqrt(5*d1)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- ERROR:
File "XXXX", line 5
    from math import* sqrt
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:05:35) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import* sqrt
dano = (5*d1)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- ERROR:
File "XXXX", line 5
    from math import* sqrt
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 10:06:29) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = (5*d1**(0.5)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- ERROR:
File "XXXX", line 7
    a= int(dano)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:25:19) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = (5*d1**(0.5)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- ERROR:
File "XXXX", line 7
    a= int(dano)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:25:55) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = ((5*d1)**0.5)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:26:06) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = ((5*d1)**0.5)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- EXECUTION TIME:
0.198771
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
-122
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
-25
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:26:09) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = ((5*d1)**0.5)+(pi**d2/3)
a= int(dano)
b= int(pv-a)

print(b)
-- OUTPUT:
-122
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:26:35) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = ((5*d1)**0.5)+(pi**(d2/3))
a= int(dano)
b= int(pv-a)

print(b)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 11:26:49) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = ((5*d1)**0.5)+(pi**(d2/3))
a= int(dano)
b= int(pv-a)

print(b)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 11:26:55) 
-- CODE:
pv = int(input('pontos de vida: '))
d1 = int(input('dado 1: '))
d2 = int(input('dado 2: '))

from math import*
dano = ((5*d1)**0.5)+(pi**(d2/3))
a= int(dano)
b= int(pv-a)

print(b)
-- EXECUTION TIME:
0.194836
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
